crates/ide/src/snapshots/ide__interop__tests__def.snap
---
source: crates/ide/src/interop.rs
expression: defs
---
[
    (
        FilePosition {
            file: FileId(
                0,
            ),
            position: 16,
        },
        [
            TblgenDef {
                name: "foo",
                define_loc: FilePosition {
                    file: FileId(
                        0,
                    ),
                    position: 16,
                },
            },
        ],
    ),
    (
        FilePosition {
            file: FileId(
                0,
            ),
            position: 26,
        },
        [
            TblgenDef {
                name: "anonymous_0",
                define_loc: FilePosition {
                    file: FileId(
                        0,
                    ),
                    position: 26,
                },
            },
        ],
    ),
    (
        FilePosition {
            file: FileId(
                0,
            ),
            position: 64,
        },
        [
            TblgenDef {
                name: "foo1",
                define_loc: FilePosition {
                    file: FileId(
                        0,
                    ),
                    position: 64,
                },
            },
            TblgenDef {
                name: "foo2",
                define_loc: FilePosition {
                    file: FileId(
                        0,
                    ),
                    position: 64,
                },
            },
        ],
    ),
    (
        FilePosition {
            file: FileId(
                0,
            ),
            position: 129,
        },
        [
            TblgenDef {
                name: "foo3",
                define_loc: FilePosition {
                    file: FileId(
                        0,
                    ),
                    position: 129,
                },
            },
        ],
    ),
    (
        FilePosition {
            file: FileId(
                0,
            ),
            position: 146,
        },
        [
            TblgenDef {
                name: "foo4",
                define_loc: FilePosition {
                    file: FileId(
                        0,
                    ),
                    position: 146,
                },
            },
        ],
    ),
]
